<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	tools:context=".YoureadActivity">
	
    <View 
        android:id="@+id/v_header_separator"
        style="@style/Separator"
        android:layout_width="fill_parent"
        android:layout_height="10dp"/>
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/v_header_separator" >
        
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="5dp">
            
		   <ImageView
		       android:id="@+id/iv_youread"
		       android:layout_width="fill_parent"
		       android:layout_height="wrap_content"
		       android:layout_margin="5dp"
		       android:contentDescription="@string/image_youread"
		       android:src="@drawable/logo_youread" />
		
		   <TextView
		       android:id="@+id/tv_about_youread"
		       android:layout_width="fill_parent"
		       android:layout_height="wrap_content"
		       android:layout_marginTop="5dp"
		       android:layout_marginLeft="10dp"
		       android:layout_marginRight="15dp"
		       android:text="@string/about_youread"
		       android:textColor="@color/text_youread"
		       android:textSize="15sp"/>
		   
		   <TextView
		       android:id="@+id/tv_creator_by"
		       android:layout_width="fill_parent"
		       android:layout_height="wrap_content"
		       android:layout_marginTop="10dp"
		       android:layout_marginLeft="10dp"
		       android:layout_marginRight="15dp"
		       android:text="@string/creator_by"
		       android:textColor="@color/text_youread"
		       android:textSize="15sp"
		       android:textStyle="bold"/>
		   
		   <TextView
		       android:id="@+id/tv_my_email"
		       android:layout_width="fill_parent"
		       android:layout_height="wrap_content"
		       android:layout_marginTop="5dp"
		       android:layout_marginLeft="10dp"
		       android:layout_marginRight="15dp"
		       android:text="@string/my_email"
		       android:textColor="@color/text_youread"
		       android:textSize="15sp"
		       android:textColorHighlight="@color/text_highlight"/>
		   
		   <TextView
		       android:id="@+id/tv_pusdatin"
		       android:layout_width="fill_parent"
		       android:layout_height="wrap_content"
		       android:layout_marginTop="5dp"
		       android:layout_marginLeft="10dp"
		       android:layout_marginRight="15dp"
		       android:text="@string/supported_by"
		       android:textColor="@color/text_youread"
		       android:textSize="15sp"
		       android:textStyle="bold"/>
		   
		   <ImageView
		       android:id="@+id/iv_pusdatin"
		       android:layout_width="100dp"
		       android:layout_height="48dp"
		       android:layout_marginTop="5dp"
		       android:layout_marginLeft="10dp"
		       android:scaleType="centerCrop"
		       android:contentDescription="@string/image_youread"
		       android:src="@drawable/logo_pusdatin" />
		   
		   <TextView
		       android:id="@+id/tv_link_pusdatin"
		       android:layout_width="fill_parent"
		       android:layout_height="wrap_content"
		       android:layout_marginTop="5dp"
		       android:layout_marginLeft="10dp"
		       android:layout_marginRight="15dp"
		       android:text="@string/pusdatin"
		       android:textColor="@color/text_youread"
		       android:textSize="14sp"
		       android:textStyle="bold"
		       android:layout_gravity="left|center_vertical"/>
		   
	   	</LinearLayout>
     </ScrollView>	
</RelativeLayout>