<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
    android:background="@drawable/gradient_bg">
    
    	<LinearLayout 
	        android:id="@+id/content"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:padding="2dp"
	        android:orientation="vertical">
    
        <!-- Title of News  -->
		<TextView 
		    android:id="@+id/title_news"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:textSize="14sp" 
		    android:text="@string/sample_title"
		    android:textStyle="bold"
		    android:textColor="@color/text"
		    />
	
		<!-- Date of News  -->
		<TextView 
		    android:id="@+id/date_news"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:textSize="12sp" 
		    android:text="@string/sample_date"
		    android:textStyle="bold"
		    android:textColor="@color/text"
		    android:layout_marginTop="2dp"
		    />
		
		<!-- Description of News -->
		<TextView
		    android:id="@+id/description_news"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:textSize="14sp"
		    android:text="@string/sample_description"
		     />	
    </LinearLayout>
</ScrollView>
